      audio and video, Renderware TeXture Dictionary video via lavc
    * libmpeg2 updated to 0.4.1
    * fixed resolution switching with libmpeg2
    * handle resolution switching for Real codecs
    * ffmpeg video decoder handles aspect ratio changes
    * amr now handled via libamr wrapper (http://www.penguin.cz/~utx/amr)

    Demuxers:
    * implemented switch_video and switch_program consistently with switch_audio
      (default keys are "_" and TAB, respectively). For the time being program
      switching is only available in TS streams handled by demux_ts.c (not
      lavf), while video switching is also handled by demux_lavf.c and
      demux_avi.c.
    * audio and video switching for AVI demuxer (video switching untested)
    * GIF demuxer improvements, should work with all GIFs now
    * support for VC1 in MPEG-TS and MPEG-PS files (bd,hd)-dvd
    * support for EVO demuxing
    * support -noidx with -demuxer lavf
    * support for channel navigation with PVR input

    Streaming:
    * authentication for Real RTSP streams
    * near-precise seeking in dvd:// and dvdnav:// (this last one requires libdvdnav from mphq)
    * speed selection when playing dvd:// streams, to make drive quieter
    * support SVQ3 and H.264 in X-QT over RTSP,
      now RTSP Apple keynotes are playable
    * smil playlist over Real RTSP
    * support H.263-2000 over RTSP
    * fix AAC-LATM over RTSP
    * support AMR over RTSP
    * support H.264 over RTSP
    * "device" and "adevice" suboptions now works for *BSD BT848 tv driver too
    * dvdnav:// now depends on mplayer's fork of libdvdnav

    FFmpeg/libavcodec:
    * Intel Music coder audio decoder
    * Fraps v2/v4 video decoder
    * H.264 decoding speedup
    * Native NUT demuxer updated to spec
    * NUT muxing and demuxing support via libnut
    * WMA encoder
    * fix MJPEGB on big-endian systems
    * lowres support for some H.264 files

    libmpeg2: